# pycodetool

./: .gitignore  README.md  YAMLObject_fromCodeConverter.py  bash2python  changelog.md  cs2python  cs2python.sh  csharp-to-python.md  example.bat  example.py  geany_run_script.bat  parsing.py  pct.py  pcttext.py  poikilos.py  pyproject.toml  readme.md  requirements.txt  setup-in-place.bat  setup-old.py  setup.py  tests.py
doc/development/: csharp-spec-5.0-grammar.html  csharp-spec-5.0-grammar.txt  csharp-spec-notes.md
etc/: pctdeprecated.py
notes/: pctdeprecated.py
pycodetool/: __init__.py  cc0code.py  changes.py  csharptopython.py  exactconfig.py  fxshim.py  ggrep.py  io_bashtopython.py  io_csharptopython.py  parsing.py  pct.py  python_remove_dotnet.py  spec.py
pycodetool/tests/: test_framework_removal.py  test_ggrep.py  test_logging.py  test_parsing.py
scripts/: ggrep  push-find.py
tests/: test_parsing.py  todo_parsing_nested.py
